--- a/app/index.html
+++ b/app/index.html
@@ -4,13 +4,12 @@
 	<title>Breakout Game</title>
 </head>
 <body>
-	<h1>Breakout Game</h1>
+	<h1 class="visually-hidden">Breakout Game</h1>
 
 	<div class="wrapper__canvas">
 		<canvas id="app_game" width="500" height="400"></canvas>
 
 		<div class="ui__wrapper">
-			
 			<div class="cont__scoring">
 				<span class="score">
 						Score
@@ -43,7 +42,6 @@
 						<img src="../app/gfx/play.svg" alt="" class="ico">
 					</button>
 			</div>
-			
 		</div>
 	</div>
 </body>
