--- a/app/partial_view/dialog.html
+++ b/app/partial_view/dialog.html
@@ -1,8 +1,11 @@
 <div class="dialog_container">
     <div class="dialog">
-        <h2>DIALOG CENTER</h2>
-        <div class="btn__cont">
-            <button class="btn btn-play">start game</button>
+        <div class="dialog--logo"></div>
+        <h2 class="dialog--title txt-center">
+            <p class="rel"><span class="dl--title-img"></span> Player 1</p>
+        </h2>
+        <div class="btn__cont cont--center">
+            <button class="btn btn-start">start game</button>
         </div>
     </div>
 </div>
